# Kubenvg2

./: .gitignore  README.md
DriftUke48v2/DatabaseSikkerhet/: Injection.md  Sql.sql  sqli.py
DriftUke48v2/SikkerhetPython/: DDoSSim.py  main.py
Oppdrag1/: Oppgave1_Fremgangsmåte.md
Oppdrag1/Oppdrag1Project/: db.sqlite3  manage.py
Oppdrag1/Oppdrag1Project/Oppdrag1Project/: asgi.py  settings.py  urls.py  wsgi.py
Oppdrag1/Oppdrag1Project/hei/: apps.py  urls.py  views.py
PoetryTest/: pyproject.toml
PoetryTest/backend/backend/: settings.py
Testmiljø/DjangoAuthTesting/: requirements.txt  testusers.md
Testmiljø/DjangoAuthTesting/AuthTestProj/: manage.py
Testmiljø/DjangoOauthGoogleTest/: Readme.md  db.sqlite3  manage.py  requirements.txt
Testmiljø/DjangoOauthGoogleTest/DjangoOauthGoogleTest/: asgi.py  settings.py  urls.py  wsgi.py
Testmiljø/DjangoOauthGoogleTest/auth_app/: adapters.py  views.py
databaseUke41/: FitnessPro.sql
database_uke9/: sql_query.sql  test_cases.sql  test_data.sql
database_uke9/Varehus_database/: app.py  helpers.py
database_uke9/Varehus_database/templates/: home.html  items.html  (+4 more)
datsikkerhetUke48/Phising_Oppgave/: dokumentasjon.md
environmentVarChecker/: envTest.py  readme.md
flaskUke42/: requirements.txt
flaskUke42/FlaskTutorial/: app.py
flaskUke42/HjemmeFlaskOpg/: tasks.md
leetcode_test/: testing.py
test_codewars/: test.py
uke 35/: bonus.py  opg3.py
uke 35/forelesning 27.8/: captain.py  input.py
uke 35/todolist/: index.py  test.py
uke3Utvikling/: 4-innlogging_oppgave.py  Readme.md  requirements.txt
(+24 files in other folders)
