[project]
name = "poetrytest"
version = "0.1.0"
description = ""
authors = [
    {name = "Manny262",email = "manelin3108@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "django (==6.0.1)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
